js/js.translator/testData/incremental/invalidation/exportsThroughInlineFunction/lib1/l2.2.kt
inline fun lib1Foo() = fooInline()
